--- a/prjSemi/src/main/webapp/resources/css/member/login.css
+++ b/prjSemi/src/main/webapp/resources/css/member/login.css
@@ -36,7 +36,7 @@ header {
     outline: none;
 }
 
-.title>#ctg[type="button"] {
+.title>#ctg input[type="button"] {
     font-family: 'Extra Light', sans-serif;
     font-weight: 200;
 }
@@ -59,12 +59,12 @@ main {
     height: 900px;
 }
 
-main.form-login {
+.form-login{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px; /* 요소 간의 간격 */
-    width: 700px; /* 폼의 너비 설정 */
+    width: 400px; /* 폼의 너비 설정 */
     padding: 40px; /* 폼의 내부 여백 */
     border: 1px solid #ccc; /* 폼의 테두리 */
     border-radius: 10px; /* 모서리 둥글게 */
