--- a/prjSemi/src/main/webapp/resources/css/reviewBoard/insert.css
+++ b/prjSemi/src/main/webapp/resources/css/reviewBoard/insert.css
@@ -8,13 +8,7 @@
   color: black;
 }
 
-body {
-  margin: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
+
 
 nav {
   width: 100%;
@@ -24,72 +18,62 @@ nav {
   grid-template-rows: 20px 180px;
 }
 
-nav #left {
-  display: flex;
-  justify-content: flex-end;
+
+
+
+/*-------*/
+.box{
+  margin: 10%;
+   display: grid;
+  align-content: center;
 }
 
-nav #left li {
-  margin-right: 20px;
-  color: black;
+
+#text{
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  
 }
 
-nav #right {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
+#text textarea{
+  height: 250px;
+  width: 200px;
+}
+#sub{
+  display: grid;
+  justify-content: center;
+
+  margin-top: 10%;
 }
 
-nav #right span {
-  margin-bottom: 20px;
+input[type="submit"]{
+  background-color: #212121;
+  color: #EFEFEF;
+  border: none;
+  outline: none;
+
+  font-size: medium;
+  font-family: 'Bold Italic', sans-serif;
+  font-weight: 700;
+  width: 200px;
+  height: 50px;
+  margin-bottom: 5%;
 }
 
-nav #right span:nth-child(1) {
-  font-size: xx-large;
+select{
+  background-color: #EFEFEF;
+  color: #212121;
+  border: none;
+  outline: none;
 }
 
-nav #right span:nth-child(2) {
-  font-size: large;
-  font-weight: 750;
-}
 
-nav #right-side {
-  display: flex;
-}
-
-nav #right-side li {
-  margin-left: 20px;
-}
-
-nav #right-side li:first-child {
-  margin-left: 0;
-}
-
-nav #right-side input {
-  margin-left: 20px;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-  width: 100%;
-  height: 2000px;
-  margin-top: 30px;
-}
+/*-------*/
 
 
  
- 
- footer {
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: white; 
-   text-align: center; 
-   padding: 10px; 
- }
+
  
  #center{
    font-weight: bold;
